--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-@import-normalize; /* bring in normalize.css styles */
+@import '../node_modules/modern-normalize/modern-normalize.css';
+@import '../node_modules/@fontsource/manrope';
+@import '../node_modules/@fontsource/inter';
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Manrope', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -12,4 +14,30 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root {
+  /* colors */
+  --cl-white: #FDF7F2;
+  --cl-yellow: #FFC107;
+  --cl-red: 	#F43F5E;
+  --cl-green: 	#00C3AD;
+  --cl-blue-link: 	#54ADFF;
+  --cl-blue-light: 	#CCE4FB;
+  --cl-accent: #FF8356;
+  --cl-black: #111111;
+  --cl-background: #FEF9F9;
+  --cl-gray: #888888;
+  --cl-almost-white: #FFFFFF;
+  
+  --gr-blue: linear-gradient(290.46deg, #419EF1 0%, #9BD0FF 107.89%);
+  --gr-accent: linear-gradient(90deg, #FF634E 0%, #FFDF48 105.44%);
+
+  --shadow-default: 3px 8px 14px rgba(136, 198, 253, 0.19);
+  --shadow-hover: 7px 13px 14px rgba(116, 177, 232, 0.24);
+
+  /* size */
+
+  /* animat */
+  --animat: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
