--- a/src/components/UserNav/UserNav.css
+++ b/src/components/UserNav/UserNav.css
@@ -1,4 +1,4 @@
-.user-nav {
+/* .user-nav {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -12,4 +12,4 @@
 
 .user-nav__name {
   color: #FFC107;
-}
+} */
