--- a/src/index.css
+++ b/src/index.css
@@ -91,3 +91,23 @@ code {
 .container {
   padding: 0 16px;
 }
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+img {
+    display: block;
+    width: 100%;
+}
